objects/Account_Profile_Staging__c.object
<CustomObject>
    <description>This is a staging object only and used to process data uploaded from other systems into the Account Profile object.  Currently, it process Tax Certificate records only.</description>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <label>Tax Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Account Profile Staging</label>
    <nameField>
        <displayFormat>APS{000000000}</displayFormat>
        <label>Account Profile Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Profile Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>